--- a/css/app02.less
+++ b/css/app02.less
@@ -1,3 +1,14 @@
+body{
+	position: relative;
+}
+#particles-js{
+	position: absolute;
+	top: 0;
+	z-index: 100;
+	max-width: 1820px;
+	width: 100%;
+	height: 960px;
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -9,7 +20,7 @@ html,body {
   height: 100%;
 }
 a {
-  color: #666;
+  color: #eee;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -21,13 +32,13 @@ a:hover, a:active, a:focus {
   outline: none;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-style: normal;
-  font-weight: 300;
+  font-weight: normal;
+  /*font-weight: 100;*/
 }
 
-h1,h2,h3 {
-  font-weight: 300;
-}
+/*h1,h2,h3 {
+  font-weight: 100;
+}*/
 
 h1 {
   font-size: 42px;
@@ -61,7 +72,7 @@ h5 {
 }
 
 strong {
-  color: #232B2B;
+  color: #eee;
   font-weight: normal;
 }
 
@@ -133,10 +144,10 @@ p {
 	h1{
 		display: inline-block;
 		margin-top: 15px;
-		color: #333;
-	    text-shadow: 1px 1px #fff;
+		color: #eee;
+	    text-shadow: 4px 4px #aaa;
 	    font-weight: bold;
-	    font-size: 24px;
+	    font-size: 37px;
 	    line-height: 35px;
 	    letter-spacing: 1px;
 	}
@@ -163,17 +174,17 @@ p {
 	margin: 0;
 }
 .home{
-	.col-md-6 {
-	  background: #f1e2d7;
+	.col-md-6{
+	  background: #000;
 	  padding-right: 0;
 	  padding-left: 0;
 	}
 }
 
 .home-img{
-	background:url('../images/home-img.jpg');
+	background:url('../images/mine02.png');
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position: 98% 50%;
 	width: 100%;
 	height: 100vh;
 }
@@ -225,7 +236,7 @@ p {
   height: 100vh;
   padding: 0 45px;
   h1,h4{
-  	color: #999;
+  	color: #eb9e33;
   	font-weight: 100px;
   	margin-bottom: 18px;
   }
@@ -241,19 +252,19 @@ p {
 .about{
 	overflow: hidden;
 	.about-img {
-		 background: url('../images/about-img.jpg') no-repeat;
+		 background: url('../images/03.jpg') no-repeat;
 	}
 
 	.about-thumb,.skill-thumb  {
 		// border: 1px solid #f00;
 	  padding: 42px 32px;
+	  /*background: #485858;*/
 
 	  p{
 		// color: #999;
 		font-size: 13px;
 		font-weight: normal;
 		letter-spacing: 1px;
-		padding-top: 6px;
 	  }
 	  .section-title{
 	  	margin-bottom: 30px;
@@ -305,7 +316,7 @@ p {
 	overflow: hidden;
 
 	.media-heading {
-	  margin-bottom: 0px;
+		text-transform: uppercase;
 	}
 	.fa {
 	  font-size: 42px;
@@ -314,6 +325,7 @@ p {
 	small {
 	  color: #633;
 	  font-weight: bold;
+	  margin-left: 30px;
 	}
 }
 .experience-img {
@@ -333,7 +345,7 @@ p {
 }
 // 背景图片
 .quotes{
-	background: url('../images/quotes-bg.jpg') 50% 0 repeat-y fixed;
+	background: url('../images/quotes-bg.png') 50% 0 repeat-y fixed;
     background-size: cover;
     background-position: center center;
     color: #ffffff;
@@ -358,19 +370,30 @@ p {
     height: 100%;
     position: absolute;
     top: 0;
-    opacity: 0.7;
+    opacity: 0.6;
+}
+.overlay01 {
+    background: #121212;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    opacity: 0.4;
 }
 .contact-thumb {
   padding: 62px 100px;
   min-height: 75vh;
 }
 .contact-img {
-  background: url('../images/contact-img.jpg') no-repeat;
+  background: url('../images/02.jpg') no-repeat;
   min-height: 75vh;
 }
 .contact-info {
   padding-top: 6px;
   padding-bottom: 6px;
+  p{
+  	line-height: 45px;
+  }
 }
 .contact{
 	background: #000;
