--- a/css/app02.css
+++ b/css/app02.css
@@ -21,7 +21,7 @@ body {
   height: 100%;
 }
 a {
-  color: #eee;
+  color: #ccc;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -77,7 +77,7 @@ strong {
   font-weight: normal;
 }
 p {
-  color: #888;
+  /*color: #888;*/
   font-size: 16px;
   font-weight: 300;
   line-height: 28px;
@@ -170,9 +170,9 @@ p {
   padding-left: 0;
 }
 .home-img {
-  background: url('../images/mine02.png');
+  background: url('../images/timg02.jpg');
   background-size: cover;
-  background-position: 98% 50%;
+  background-position: 70% 50%;
   width: 100%;
   height: 100vh;
 }
@@ -181,7 +181,7 @@ p {
 }
 .section-btn {
   background-color: transparent;
-  border: 3px solid #232B2B;
+  border: 3px solid #ea9d33;
   border-radius: 100px;
   color: #232B2B;
   font-size: 13px;
@@ -225,7 +225,7 @@ p {
   margin-bottom: 18px;
 }
 .home-thumb p {
-  color: #999;
+  color: #ccc;
   font-size: 13px;
   font-weight: normal;
   letter-spacing: 2px;
@@ -305,9 +305,10 @@ p {
 }
 .experience small,
 .education small {
-  color: #633;
+  color: #000;
   font-weight: bold;
   margin-left: 30px;
+  font-size: 20px;
 }
 .experience-img {
   background: url('../images/experience-img.jpg') no-repeat;
@@ -329,7 +330,7 @@ p {
   background: url('../images/quotes-bg.png') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
-  color: #ffffff;
+  color: #ccc;
   position: relative;
   padding: 100px 0px;
   text-align: center;
@@ -343,6 +344,7 @@ p {
   margin-bottom: 22px;
 }
 .quotes p {
+  color: #eee;
   padding-top: 32px;
 }
 .overlay {
@@ -362,6 +364,7 @@ p {
   opacity: 0.4;
 }
 .contact-thumb {
+  color: #ccc;
   padding: 62px 100px;
   min-height: 75vh;
 }
@@ -374,6 +377,7 @@ p {
   padding-bottom: 6px;
 }
 .contact-info p {
+  font-size: 16px;
   line-height: 45px;
 }
 .contact {
