--- a/css/app02.less
+++ b/css/app02.less
@@ -20,7 +20,7 @@ html,body {
   height: 100%;
 }
 a {
-  color: #eee;
+  color: #ccc;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -77,7 +77,7 @@ strong {
 }
 
 p {
-    color: #888;
+    /*color: #888;*/
     font-size: 16px;
     font-weight: 300;
     line-height: 28px;
@@ -182,9 +182,9 @@ p {
 }
 
 .home-img{
-	background:url('../images/mine02.png');
+	background:url('../images/timg02.jpg');
 	background-size: cover;
-	background-position: 98% 50%;
+	background-position: 70% 50%;
 	width: 100%;
 	height: 100vh;
 }
@@ -193,7 +193,7 @@ p {
 }
 .section-btn {
   background-color: transparent;
-  border: 3px solid #232B2B;
+  border: 3px solid #ea9d33;
   border-radius: 100px;
   color: #232B2B;
   font-size: 13px;
@@ -241,7 +241,7 @@ p {
   	margin-bottom: 18px;
   }
   p{
-	color: #999;
+	color: #ccc;
 	font-size: 13px;
 	font-weight: normal;
 	letter-spacing: 2px;
@@ -323,9 +323,10 @@ p {
 	  margin-right: 14px;
 	}
 	small {
-	  color: #633;
+	  color: #000;
 	  font-weight: bold;
 	  margin-left: 30px;
+	  font-size: 20px;
 	}
 }
 .experience-img {
@@ -348,7 +349,7 @@ p {
 	background: url('../images/quotes-bg.png') 50% 0 repeat-y fixed;
     background-size: cover;
     background-position: center center;
-    color: #ffffff;
+    color: #ccc;
     position: relative;
     padding: 100px 0px;
     text-align: center;
@@ -361,6 +362,7 @@ p {
 	  margin-bottom: 22px;
 	}
 	p {
+		color: #eee;
 	  padding-top: 32px;
 	}
 }
@@ -381,17 +383,19 @@ p {
     opacity: 0.4;
 }
 .contact-thumb {
-  padding: 62px 100px;
-  min-height: 75vh;
+	color: #ccc;
+	padding: 62px 100px;
+	min-height: 75vh;
 }
 .contact-img {
-  background: url('../images/02.jpg') no-repeat;
-  min-height: 75vh;
+	background: url('../images/02.jpg') no-repeat;
+	min-height: 75vh;
 }
 .contact-info {
   padding-top: 6px;
   padding-bottom: 6px;
   p{
+  	font-size: 16px;
   	line-height: 45px;
   }
 }
