--- a/css/app02.css
+++ b/css/app02.css
@@ -47,18 +47,18 @@ h6 {
   font-weight: 100;
 }*/
 h1 {
-  font-size: 42px;
+  font-size: 2.8rem;
   padding-bottom: 14px;
   margin-bottom: 0px;
 }
 h2 {
-  font-size: 42px;
-  line-height: 52px;
+  font-size: 2.6rem;
+  line-height: 3rem;
   margin-top: 0px;
 }
 h3 {
-  font-size: 26px;
-  line-height: 32px;
+  font-size: 2rem;
+  line-height: 2.5rem;
   padding-bottom: 6px;
 }
 h4 {
@@ -67,7 +67,7 @@ h4 {
   font-weight: normal;
   letter-spacing: 2px;
   text-transform: uppercase;
-  padding-top: 6px;
+  padding-top: 0.5rem;
 }
 h5 {
   color: #666666;
@@ -300,15 +300,15 @@ p {
 }
 .experience .fa,
 .education .fa {
-  font-size: 42px;
-  margin-right: 14px;
+  font-size: 4rem;
+  margin-right: 1rem;
 }
 .experience small,
 .education small {
   color: #000;
   font-weight: bold;
-  margin-left: 30px;
-  font-size: 20px;
+  margin-left: 2rem;
+  font-size: 1.5rem;
 }
 .experience-img {
   background: url('../images/experience-img.jpg') no-repeat;
@@ -319,12 +319,12 @@ p {
 .experience-thumb,
 .education-thumb {
   height: 40vh;
-  padding: 0 45px;
+  padding: 0 2.5rem;
   padding: 22px 42px 42px 42px;
 }
 .experience-thumb > div,
 .education-thumb > div {
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 .quotes {
   background: url('../images/quotes-bg.png') 50% 0 repeat-y fixed;
