--- a/css/app02.less
+++ b/css/app02.less
@@ -41,20 +41,20 @@ h1,h2,h3,h4,h5,h6 {
 }*/
 
 h1 {
-  font-size: 42px;
+  font-size: 2.8rem;
   padding-bottom: 14px;
   margin-bottom: 0px;
 }
 
 h2 {
-  font-size: 42px;
-  line-height: 52px;
+  font-size: 2.6rem;
+  line-height: 3rem;
   margin-top: 0px;
 }
 
 h3 {
-  font-size: 26px;
-  line-height: 32px;
+  font-size: 2rem;
+  line-height: 2.5rem;
   padding-bottom: 6px;
 }
 
@@ -64,7 +64,7 @@ h4 {
   font-weight: normal;
   letter-spacing: 2px;
   text-transform: uppercase;
-  padding-top: 6px;
+  padding-top: 0.5rem;
 }
 
 h5 {
@@ -319,14 +319,14 @@ p {
 		text-transform: uppercase;
 	}
 	.fa {
-	  font-size: 42px;
-	  margin-right: 14px;
+	  font-size: 4rem;
+	  margin-right: 1rem;
 	}
 	small {
 	  color: #000;
 	  font-weight: bold;
-	  margin-left: 30px;
-	  font-size: 20px;
+	  margin-left: 2rem;
+	  font-size: 1.5rem;
 	}
 }
 .experience-img {
@@ -337,11 +337,11 @@ p {
 }
 .experience-thumb,.education-thumb{
 	height: 40vh;
-	padding: 0 45px;
+	padding: 0 2.5rem;
 	// border: 1px solid #f00;
 	padding: 22px 42px 42px 42px;
 	>div{
-		margin-bottom: 40px;
+		margin-bottom: 2.5rem;
 	}
 }
 // 背景图片
