--- a/css/app02.less
+++ b/css/app02.less
@@ -336,7 +336,7 @@ p {
 	background: url('../images/education-img.jpg') no-repeat;
 }
 .experience-thumb,.education-thumb{
-	height: 40vh;
+	// height: 40vh;
 	padding: 0 2.5rem;
 	// border: 1px solid #f00;
 	padding: 22px 42px 42px 42px;
